2001-12-21 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* modified configure.in
	  - added python1.5 to search for python libs
	  - fixed setting of have_boost_lib
	* modified gfx/vdu.{h,cpp} cockpit_xml.cpp
	  - messages are now displayed in the right VDU
	  - the target-vdu now displays also the FgID

	
2001-12-20 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* callbacks use now ints instead of floats
	* modules/*.c use now also ints
	

2001-12-19 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added _io.printf
	* datatype int working
	

2001-12-18 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* datatype int implemented (untested)
	* added basic python support (SCREAM!)
	

2001-12-16 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added src/cmd/script/director.cpp
	* at end-of-game, the variables are serialized to disk
	* add _string.equal, _std.equal
	

2001-12-16 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added src/cmd/script/msgcenter.{cpp,h}
	* modified src/cmd/script/Makefile.am
	* added callbacks _io.message, _io.printMsgList
	

2001-12-15 Alexander Rawass <alexannika@users.sourceforge.net>

	* added commonly used modules:
	  - faction_ships.c
	  - launch.c
	  - random.c
	  - vec3.c
	* added mission total_war1, launch_and_launch1

	
2001-12-15 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added _std.isNull function to test for null objects
	* added callback 'launch' to launch new ships from script
	
	
2001-12-14 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* a joystick axis can now have an 'inverse' attribute
	* more fixes for parseCalike problem
	
	
2001-12-13 Alexander Rawass <alexannika@users.sourceforge.net>

	* fix for Patrick's parseCalike problem?

	
2001-12-13 Alexander Rawass <alexannika@users.sourceforge.net>

	* added strings to c_alike.yacc
	* added string callbacks src/cmd/script/script_call_string.cpp
	* made Unit remember the Flightgroup & nr